# kde-thumbnailer-qoi

./: .gitmodules  CMakeLists.txt  FindGLIB2.cmake  FindGObject.cmake  FindLIBGSF.cmake  README.md  qoicreator.cpp  qoicreator.h  qoithumbnail.desktop
mime/: q-qoi.xml
